# ZKSummitHackingChallenge

./: Cargo.toml  README.md  submission.csv
src/: lib.rs  prove.rs  verify.rs
