[package]
name = "zk-summit-challenge"
version = "7.0.0"
edition = "2018"
publish = false

[dependencies]
ark-poly = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-serialize = { version = "0.3.0", features = ["std"] }
rand = "0.8.5"
clap = { version = "3.1.10", features = ["derive"] }
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0.56"
hex = "0.4.3"
blake3 = "1.3.1"
